Changed hour formatter to be consistent with US locale

--- a/codelab_timetracker/lib/l10n/intl_en_US.arb
+++ b/codelab_timetracker/lib/l10n/intl_en_US.arb
@@ -1,4 +1,5 @@
 {
+    "locale_name" : "en_US",
     "home_title": "Home",
     "add_component_create": "create",
     "add_component_title" : "Add Project or Task",
