--- a/codelab_timetracker/lib/l10n/intl_es_VE.arb
+++ b/codelab_timetracker/lib/l10n/intl_es_VE.arb
@@ -1,4 +1,5 @@
 {
+    "locale_name": "es_VE",
     "home_title": "Inicio",
     "add_component_create": "crear",
     "add_component_title" :" Agregar Proyecto o Tarea",
